format the code using prettier

--- a/scss/_fonts.scss
+++ b/scss/_fonts.scss
@@ -1,5 +1,5 @@
 // Font using for Headings, Call to action and Header Navigation
-@import url("https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap');
 
 // Font using for Body
-@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap');
