--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -1,37 +1,37 @@
 .header {
-  display: flex;
-  justify-content: space-between;
-  padding: 2.5rem; // 40px
-  background-color: $intro-dark-blue;
-
-  .logo {
     display: flex;
+    justify-content: space-between;
+    padding: 2.5rem; // 40px
+    background-color: $intro-dark-blue;
 
-    img {
-      width: 5.625rem; // 90px
+    .logo {
+        display: flex;
+
+        img {
+            width: 5.625rem; // 90px
+        }
     }
-  }
 
-  .links {
-    display: flex;
-    align-items: center;
+    .links {
+        display: flex;
+        align-items: center;
 
-    a {
-      text-decoration: none;
-      font-family: "Raleway", sans-serif;
-      color: $white;
-      font-size: 0.875rem; // 14px
+        a {
+            text-decoration: none;
+            font-family: 'Raleway', sans-serif;
+            color: $white;
+            font-size: 0.875rem; // 14px
 
-      &:not(:last-child) {
-        margin-right: 1.875rem; // 30px
-      }
+            &:not(:last-child) {
+                margin-right: 1.875rem; // 30px
+            }
 
-      &:hover {
-        font-weight: 700;
-        text-decoration: underline;
-        text-decoration-thickness: 1%;
-        cursor: pointer;
-      }
+            &:hover {
+                font-weight: 700;
+                text-decoration: underline;
+                text-decoration-thickness: 1%;
+                cursor: pointer;
+            }
+        }
     }
-  }
 }
