--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,13 +1,13 @@
 // globals
-@import "colors";
-@import "fonts";
-@import "global";
+@import 'colors';
+@import 'fonts';
+@import 'global';
 
 // modules
-@import "header";
-@import "hero";
-@import "features";
-@import "productive";
-@import "testimonial";
-@import "email";
-@import "footer";
+@import 'header';
+@import 'hero';
+@import 'features';
+@import 'productive';
+@import 'testimonial';
+@import 'email';
+@import 'footer';
