--- a/scss/_features.scss
+++ b/scss/_features.scss
@@ -1,28 +1,25 @@
-.features {
+#features {
     width: 100%;
     display: flex;
-    flex-direction: column;
-    align-items: center;
+    justify-content: center;
 
     .container {
         width: 35rem;
         display: flex;
         flex-wrap: wrap;
-        justify-content: space-between;
-        align-content: space-between;
+        justify-content: center;
+        align-items: flex-start;
 
         .block {
-            width: 17rem; // 272px
-            height: 7.25rem; // 116px
-
+            width: 40%;
             display: flex;
             flex-direction: column;
             align-items: center;
             text-align: center;
+            margin: 2.5%;
 
-            &:nth-child(3),
-            &:nth-child(4) {
-                margin-top: 5%;
+            @include breakpoint-down(medium) {
+                width: 80%;
             }
 
             .img-container {
