--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -3,7 +3,7 @@
     display: flex;
     flex-direction: column;
     padding: 2.5rem; // 40px
-    padding-bottom: 2.875rem; // 46px
+    font-size: 0.625rem; // 10px
 
     .logo-container {
         margin: 6.25rem 0 1rem 1.25rem; // 100px 0 16px 20px
@@ -16,51 +16,61 @@
     .info-container {
         display: flex;
         justify-content: space-between;
+        margin-left: 1.25rem; // 20px
 
-        .location-container {
+        @include breakpoint-down(medium) {
+            flex-direction: column;
+        }
+
+        ul {
+            padding: 0;
             display: flex;
-            width: 12.5rem; // 200px
-            margin-left: 1.25rem; // 20px
-            width: 15rem; // 240px
-
-            p {
-                font-size: 0.675rem; // 10px
-            }
-        }
-
-        img {
-            width: 0.875rem; // 14px
-            margin-right: 0.875rem;
-        }
-
-        li {
             list-style: none;
-            font-size: 0.675rem; // 10px
-            margin-bottom: 0.5rem; // 8px
+            flex-direction: column;
+            margin-right: 1rem; // 16px
+            flex: 0 0 auto;
 
-            a {
-                display: block;
-                text-decoration: none;
-                color: $white;
-                font-size: 0.875rem; // 14px
-                width: 5rem; // 80px
+            li {
+                display: flex;
+                margin-bottom: 0.875rem; // 14px
 
-                &:hover {
-                    font-weight: 700;
+                a {
+                    color: $white;
+                }
+
+                img {
+                    max-width: 1rem; // 16px
+                    max-height: 1.125rem; // 18px
+                    margin-right: 0.875rem; // 14px
+                }
+                p {
+                    margin: 0;
+                }
+            }
+
+            &.location-container {
+                flex: 2 1 20%;
+                max-width: 40%;
+
+                @include breakpoint-down(medium) {
+                    max-width: 100%;
                 }
             }
         }
 
         .socialmedia-container {
             display: flex;
+            justify-content: center;
+
             a {
-                width: 2rem;
-                height: 2rem;
+                width: 1.5rem;
+                height: 1.5rem;
                 border-radius: 50%;
                 border: 1px solid $white;
                 display: flex;
                 justify-content: center;
                 align-items: center;
+                margin-top: 0.875rem; // 14px
 
                 &:not(:last-child) {
                     margin-right: 0.25rem;
