--- a/scss/_productive.scss
+++ b/scss/_productive.scss
@@ -1,14 +1,25 @@
 .productive {
+    width: 100%;
     display: flex;
     justify-content: center;
-    margin: 4rem; // 16px
+    margin: 4rem 0; // 16px
+
+    @include breakpoint-down(medium) {
+        flex-direction: column;
+        align-items: center;
+    }
 
     & > img {
-        width: 20rem; // 320px
+        width: 16rem; // 256 px
         margin-right: 2rem;
+
+        @include breakpoint-down(medium) {
+            width: 60%;
+        }
     }
     .container {
-        width: 20rem; // 320px
+        width: 80%;
+        max-width: 20rem; // 320px
 
         h2 {
             font-size: 1.2rem;
@@ -23,6 +34,7 @@
             color: $cyan;
             display: flex;
             align-items: center;
+            text-decoration: none;
 
             img {
                 width: 0.675rem; //10px
@@ -30,11 +42,8 @@
             }
 
             &:hover {
-                color: $white;
-
-                img {
-                    color: $white;
-                }
+                text-decoration: underline;
+                text-underline-offset: 0.2rem;
             }
         }
     }
