--- a/scss/_testimonial.scss
+++ b/scss/_testimonial.scss
@@ -1,4 +1,5 @@
 .testimonial {
+    width: 100%;
     display: flex;
     justify-content: center;
 
@@ -7,8 +8,13 @@
         justify-content: center;
         align-items: center;
         position: relative;
-        width: 40rem; // 640px
+        width: 80%;
+        max-width: 40rem; // 640px
         padding: 1.25rem 0.375rem; // 20px 6px
+
+        @include breakpoint-down(medium) {
+            flex-direction: column;
+        }
 
         & > img {
             position: absolute;
@@ -16,6 +22,11 @@
             left: 0;
             width: 1.75rem;
             height: 1.5rem;
+
+            @include breakpoint-down(medium) {
+                top: 0.5rem;
+                left: 0.5rem;
+            }
         }
 
         .tes-container {
@@ -25,8 +36,17 @@
             padding: 1.5rem 0.875rem 0.875rem 0.875rem;
             z-index: 1;
             border-radius: 0.25rem;
+
+            @include breakpoint-down(medium) {
+                margin: 0.5rem;
+            }
+
             &:not(:last-child) {
                 margin-right: 1.25rem;
+
+                @include breakpoint-down(medium) {
+                    margin-right: 0.5rem;
+                }
             }
 
             & > p {
