--- a/scss/style.css
+++ b/scss/style.css
@@ -4,6 +4,7 @@ html {
   font-size: 100%;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
+  scroll-behavior: smooth;
 }
 
 *,
